--- a/assets/css/lime.css
+++ b/assets/css/lime.css
@@ -650,6 +650,20 @@ strong,
 .lime-header.scroll-header .navbar-brand {
     color: #fff;
 }
+/* new sticky */
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 102px;
+}
 
 .navbar-toggler {
     padding: 0;
